# macos-fonts-mcp

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  server.py
macfonts/: __init__.py  cache.py  cleanup.py  config.py  convert.py  cssgen.py  discovery.py  logging_config.py  metadata.py  models.py  s3publish.py
tests/: test_integration.py  test_smoke.py
